# droid-rust

./: Cargo.toml  readme.md
examples/: jni_audio.rs
native-demo/: README.md  build.gradle
native-demo/example/: build.gradle
native-demo/example/rust/: .gitignore  Cargo.toml  build.rs
native-demo/example/rust/native_app_glue/: CMakeLists.txt  android_native_app_glue.c  main.c
native-demo/example/rust/src/: lib.rs  main.rs
native-demo/example/src/main/: AndroidManifest.xml
native-demo/example/src/main/res/values/: strings.xml
native-demo/gradle/wrapper/: gradle-wrapper.properties
