[package]
name = "nativedemo"
version = "0.0.1"
authors = ["Nikita Krupitskas <krupitskaz@gmail.com>"]
edition = "2021"

[dependencies]
libc = "0.2"

[target.'cfg(target_os="android")'.dependencies]
jni = "0.19.0"
ndk = { version = "0.6.0", features = [ "all" ] }
ndk-glue = { version = "0.6.1", features = ["logger"] }
log = "0.4.16"

[lib]
path = "src/lib.rs"
name = "nativedemo"
crate-type = ["staticlib", "cdylib"]

[build-dependencies]
