[package]
name = "nativedemo"
version = "0.0.1"
authors = ["Nikita Krupitskas <krupitskaz@gmail.com>"]
edition = "2021"

[dependencies]
android_logger = "0.13"
log = "0.4"

[target.'cfg(target_os="android")'.dependencies]
android-activity = { version = "0.4", features = [ "native-activity" ] }

[lib]
path = "src/lib.rs"
name = "nativedemo"
crate-type = ["staticlib", "cdylib"]

[build-dependencies]
